# nautica_ui

./: .bazelignore  .npmrc  BAZEL.md  BUILD.bazel  MODULE.bazel  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
anchor/ui/: BUILD.bazel  index.ts  package.json
anchor/ui/tabs/: AnchorLocations.test.tsx  AnchorLocations.tsx
captain/ui/: BUILD.bazel  CaptainGroups.tsx  CaptainUsers.tsx  captainGroupsSlice.ts  captainUsersSlice.ts  index.ts  package.json
captain/ui/services/: service.ts
captain/ui/slices/: captainGroupsSlice.ts
captain/ui/tabs/: CaptainGroups.test.tsx  CaptainGroups.tsx  CaptainUsers.test.tsx  CaptainUsers.tsx
common/ui/: BUILD.bazel  index.ts  nautica-types.ts  package.json
common/ui/hooks/: index.ts  useAsyncModal.test.ts  useAuth.test.ts  useAuth.ts  useEntityData.ts  useForm.test.ts  useListFiltering.test.ts  useLocalStorage.test.ts  useModalForm.test.ts  useModalRoute.test.ts  useNotification.test.ts  useNotification.ts  useNotifications.test.ts  usePersistedSet.ts  useTableFeatures.test.ts  useTheme.test.ts  useTideWatch.test.ts  useTideWatch.ts
common/ui/services/: base.ts  notifications.ts
common/ui/store/: createEntitySlice.ts
common/ui/utils/: format.test.ts  forms.test.ts  validation.test.ts
frontend/: .env.example  BUILD.bazel  Dockerfile.dev  envoy.yaml  index.html  package-lock.json  package.json  run-vitest.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AccessPage.test.tsx  AccessPage.tsx  ActionBar.test.tsx  AnchorLocations.tsx  ApiHistory.test.tsx  ApiHistory.tsx  Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Checkbox.test.tsx  CloseButton.test.tsx  CloseButton.tsx  CodeGeneratorDialog.test.tsx  CodeGeneratorDialog.tsx  ConfirmDialog.test.tsx  CopyButton.test.tsx  DataTable.test.tsx  DeployPage.test.tsx  DeployPage.tsx  DevicesPage.test.tsx  DevicesPage.tsx  Dialog.test.tsx  DialogActions.test.tsx  DnsPage.test.tsx  DnsPage.tsx  Drawer.test.tsx  DropdownSelect.test.tsx  EmptyState.test.tsx  ErrorBoundary.test.tsx  ErrorMessage.test.tsx  ErrorMessage.tsx  FormDialog.test.tsx  FormField.test.tsx  HelpDialog.test.tsx  HelpDialog.tsx  Icon.test.tsx  IconButton.test.tsx  InfoSection.test.tsx  (+53 more)
frontend/src/styles/: base.css  cards.css  components.css  forms.css  game.css  navigation.css  overlays.css  pages.css  tables.css  theme-overrides.css  tidewatch.css  variables.css
frontend/src/test/: helpers.tsx  setup.ts
harbor/ui/: BUILD.bazel  HarborJobs.tsx  harborJobsSlice.ts  index.ts  package.json  useHarborJobs.ts
harbor/ui/hooks/: useHarborJobs.test.ts  useHarborJobs.ts
harbor/ui/services/: service.ts
harbor/ui/slices/: harborJobsSlice.test.ts
harbor/ui/tabs/: HarborJobs.test.tsx  HarborJobs.tsx
island/ui/: BUILD.bazel  index.ts  package.json
island/ui/hooks/: useIslandFirmware.test.ts  useIslandFirmware.ts  useIslandModels.test.ts  useIslandModels.ts
island/ui/services/: service.ts
island/ui/slices/: islandFirmwareSlice.ts  islandModelsSlice.ts
island/ui/tabs/: IslandFirmware.test.tsx  IslandFirmware.tsx  IslandModels.test.tsx  IslandModels.tsx
keel/ui/: BUILD.bazel  index.ts  package.json
keel/ui/tabs/: KeelCatalog.test.tsx  KeelCatalog.tsx
ledger/ui/: BUILD.bazel  LedgerSearch.tsx  index.ts  package.json  service.ts  useLedger.ts
ledger/ui/hooks/: useLedger.test.ts  useLedger.ts
ledger/ui/slices/: ledgerSlice.test.ts  ledgerSlice.ts
ledger/ui/tabs/: LedgerSearch.test.tsx  LedgerSearch.tsx
mobile/: BUILD.bazel  README.md
mobile/src/core/: BUILD.bazel  index.ts
mobile/src/core/hooks/: index.ts
mobile/src/navigation/: AppNavigator.tsx
ocean/ui/: BUILD.bazel  OceanCircuits.tsx  OceanDevices.tsx  index.ts  oceanCircuitsSlice.ts  oceanDevicesSlice.ts  package.json  service.ts  useOceanCircuits.ts  useOceanDevices.ts
ocean/ui/hooks/: useOceanCircuits.test.ts  useOceanCircuits.ts  useOceanDevices.test.ts  useOceanDevices.ts
ocean/ui/slices/: oceanDevicesSlice.ts
ocean/ui/tabs/: OceanCircuits.test.tsx  OceanCircuits.tsx  OceanDevices.test.tsx  OceanDevices.tsx
proto/: buf.gen.yaml  buf.yaml
proto/anchor/api/: anchor.proto  iso_3166.proto
proto/captain/api/: captain.proto
proto/common/api/: timestamp.proto
proto/harbor/api/: harbor.proto
proto/island/api/: island.proto
proto/keel/api/: chassis.proto
proto/ledger/api/: ledger.proto
proto/ocean/api/: ocean.proto
proto/quartermaster/api/: quartermaster.proto
proto/shipwright/api/: shipwright.proto
proto/skipper/api/: skipper.proto
quartermaster/ui/: BUILD.bazel  index.ts  package.json
quartermaster/ui/tabs/: QuartermasterParts.test.tsx  QuartermasterParts.tsx
scripts/: dev-backend.sh
shared/core/: BUILD.bazel  index.ts  nautica-types.ts
shared/core/hooks/: index.ts  useApiHistory.test.ts  useEntityData.test.ts  useEntityData.ts  useInflight.test.ts  useLocalSettings.test.ts  usePersistedSet.test.ts  useTelemetry.test.ts
shared/core/services/: base.ts  grpc-transport.ts  index.ts  okta.ts
shared/core/store/: createEntitySlice.test.ts  createEntitySlice.ts  index.ts
shared/core/utils/: errors.test.ts  forms.test.ts  validation.test.ts
shipwright/ui/: BUILD.bazel  ShipwrightJobs.tsx  WorkflowViewer.tsx  index.ts  package.json  shipwrightJobsSlice.ts  useShipwrightJobs.ts
shipwright/ui/hooks/: useShipwrightJobs.test.ts  useShipwrightJobs.ts
shipwright/ui/services/: service.ts
shipwright/ui/slices/: shipwrightJobsSlice.test.ts  shipwrightJobsSlice.ts
shipwright/ui/tabs/: ShipwrightJobs.test.tsx  ShipwrightJobs.tsx  WorkflowViewer.css  WorkflowViewer.test.tsx  WorkflowViewer.tsx
skipper/ui/: BUILD.bazel  SkipperBuilds.tsx  index.ts  package.json  service.ts  skipperSlice.ts
skipper/ui/slices/: skipperSlice.test.ts
skipper/ui/tabs/: SkipperBuilds.test.tsx  SkipperBuilds.tsx
tidewatch/ui/: BUILD.bazel  index.ts  package.json
tidewatch/ui/tabs/: TideWatch.test.tsx  TideWatch.tsx
